<resources>
    <string name="app_name">Localizar Celular</string>
    <string name="title_activity_maps">Map</string>
    <string name="privacy_policy"><u>Privacy Policy</u></string>
    <string name="terms_of_use"><u>Terms of Use</u></string>
    <string name="remove_ads"><u>Remove Ads</u></string>
    <string name="skip_all_tips"><u>Skip all tips</u></string>
    <string name="remove_ads1"><u>Remove Ads</u></string>
    <string name="sharing_history">Sharing History</string>
    <string name="purchase_devices">Purchase Devices</string>
    <string name="to_do_list">To-do List</string>
    <string name="my_task_list">My Task List</string>
    <string name="assigned_by_me">Assigned by Me</string>
    <string name="assing_task">Assing Task</string>
    <string name="you_have_no_tasks_yet_create_a_task_by_tapping_the_button_below_provided">You have no tasks yet. Create a task by tapping the button below provided.</string>
    <string name="battery_alerts">Battery Alerts</string>
    <string name="invite_a_member_to_continue">Invite a member to continue</string>
    <string name="emergency_contacts">Emergency Contacts</string>
    <string name="most_visited_places">Most Visited Places</string>
    <string name="unlock_premium">Unlock Premium</string>
    <string name="unlock_premium_ads">Unlock Premium By Watching Ads</string>
    <string name="by_shaking_phone">By Shaking Phone</string>
    <string name="share_this_invite_code_with_your_friends_and_family">Share this invite code with your friends and family.</string>
    <string name="cwg_tcb">CWG-TCB</string>
    <string name="from_contacts">From Contacts</string>
    <string name="find_neraby">Find Neraby</string>
    <string name="by_other_options">By other options</string>
    <string name="my_circle">My Circle</string>
    <string name="checkInternet">Please Check Your Internet Connection</string>
    <string name="update_profile">Update Profile</string>
    <string name="update_mobile">Update Mobile Number</string>
    <string name="save">Save</string>
    <string name="i_have_a_account">I Have a Account</string>
    <string name="create_circle">Create Circle</string>
    <string name="update_circle_name">Update Circle Name</string>
    <string name="my_places">My Places</string>
    <string name="setup_location_alert">Setup location alert</string>
    <string name="delete_circle">Delete Circle</string>
    <string name="Leave_circle">Leave Circle</string>
    <string name="place">Place</string>
    <string name="current_location">Current Location</string>
    <!--
    <string name="place_api_key">AIzaSyC4Eg_qGdkZrcW-td6QsmJAk2g4nzPaat0</string>
-->
    <string name="place_api_key">AIzaSyCjm3GS5HaNLYXnxqqF_IhsufMpQgcx8T0</string>

    <string name="buy_with_googlepay_button_content_description">Buy with Google Pay</string>


    ////
    <!-- Payment notification -->
    <string name="channel_name">Payment Channel</string>
    <string name="send_notification">Send Notification</string>
    <string name="notification_title" translatable="false">Account top up</string>
    <string name="notification_text">Your account balance in close to zero. Top it up now.</string>
    <string name="pay_other_method">Top-up using a different method</string>

    <!-- Checkout -->
    <string name="googlepay_status_unavailable">Unfortunately, Google Pay is not available on this device.</string>
    <string name="payments_show_name">Successfully received payment data for %s!</string>
    <string name="gateway_replace_name_example">"Gateway name set to \"example\" - please modify Constants.java and replace it with your own gateway."</string>
    <string name="checkout_item_description">Description</string>
    <string name="go_to_setting">Go to Setting</string>
    <string name="my_contact_list">My Contact List</string>
    <string name="you_need_to_have_at_least_one_ither_member_in_your_circle_to_set_battery_alerts">You need to have at least one ither member in your circle to set battery alerts.</string>
    <string name="new_mobile_number">New Mobile Number</string>
    <string name="circle_name">Circle Name</string>
    <string name="continued">Continue</string>
    <string name="skip_all">Skip All</string>
    <string name="circle_details">Circle Details</string>
    <string name="invite_new_member">Invite New Member</string>
    <string name="user">User</string>
    <string name="circle_owner">Circle owner</string>
    <string name="device_details">Device Details</string>
    <string name="device_name">Device Name</string>
    <string name="device_version">Device Version</string>
    <string name="driving_protection">Driving Protection</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone number</string>
    <string name="following_people_will_receive_sos_message_from_you_in_case_of_emergency">Following people will receive SOS message from you in case of emergency.</string>
    <string name="send_msg">Send Msg.</string>
    <string name="faq_s">FAQ’s</string>
    <string name="people">People</string>
    <string name="places">Places</string>
    <string name="premium">Premium</string>
    <string name="menu">Menu</string>
    <string name="support">Support</string>
    <string name="join_circle">Join Circle</string>
    <string name="message">Message</string>
    <string name="emergency_alert">Emergency Alert</string>
    <string name="settings">Settings</string>
    <string name="tutorial">Tutorial</string>
    <string name="logout">Logout</string>
    <string name="this_code_is_valid_until_september_30_2021">This code is valid until September 30, 2021</string>
    <string name="tip_you_can_share_this_code_in_any_way_you_want_text_it_email_it_write_it_down_or_say_it">Tip: you can share this code in any way you want: text it, email it, write it down or say it.</string>
    <string name="share_code">Share Code</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="invitations_from_your_friends_and_family_will_be_placed_here">Invitations from your friends and family will be placed here.</string>
    <string name="manage_invitations">Manage Invitations</string>
    <string name="manage_member_and_circles">Manage Member and Circles</string>
    <string name="members">Members</string>
    <string name="circles">Circles</string>
    <string name="now_let_s_locate_your_loved_one">Now let’s locate your loved one!</string>
    <string name="add_from_contacts">Add from contacts</string>
    <string name="start_tracking">Start Tracking</string>
    <string name="later">Later</string>
    <string name="me">Me</string>
    <string name="just_updated">Just Updated</string>
    <string name="my_account">My Account</string>
    <string name="circle">Circle</string>
    <string name="add">Add</string>
    <string name="you_need_to_have_at_least_one_other_member_in_your_circle_to_chat">You need to have at least one other member in your circle to chat.</string>
    <string name="home">Home</string>
    <string name="no_notifications_yet">No notifications yet</string>
    <string name="places_for_geo_n_reminders">Places for geo \n reminders</string>
    <string name="most_visited">Most Visited</string>
    <string name="delete">Delete</string>
    <string name="add_new_member">Add New Member</string>
    <string name="normal">NORMAL</string>
    <string name="terrain">TERRAIN</string>
    <string name="satellite">SATELLITE</string>
    <string name="share_for">Share for</string>
    <string name="_15_minutes">15 minutes</string>
    <string name="_30_minutes">30 minutes</string>
    <string name="_1_hour">1 hour</string>
    <string name="_8_hours">8 hours</string>
    <string name="share_location">Share Location</string>
    <string name="join_circle_by_code">Join Circle by Code</string>
    <string name="enter_the_invite_code_here">Enter the invite code here</string>
    <string name="join">Join</string>
    <string name="kilometer">kilometer</string>
    <string name="miles">Miles</string>
    <string name="clip_the_tracker_to_a_bag_dogs_ncollar_or_your_child_s_toy">Clip the tracker to a bag, dogs \ncollar, or your child’s Toy.</string>
    <string name="first_name">First Name</string>
    <string name="finish">Finish</string>
    <string name="next">Next</string>
    <string name="notifications">Notifications</string>
    <string name="done">Done</string>
    <string name="change_language">Change Language</string>
    <string name="one_last_step_enter_your_phone_number">One last step, Enter your phone number</string>
    <string name="send_feedback_report_a_bug">Send Feedback/ Report a bug</string>
    <string name="distance_contacts">Distance Contacts</string>
    <string name="map_mode">Map Mode</string>
    <string name="location_accuracy">Location Accuracy</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="no_address">No Address.</string>
    <string name="no_circle_found">No Circle Found</string>

</resources>