<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/_5sdp"
    >

    <TextView
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:textSize="@dimen/_14sdp"
        android:text="@string/share_for"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
    </TextView>

    <LinearLayout
        android:layout_marginTop="@dimen/_20sdp"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >

        <RadioGroup
            android:id="@+id/RGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >

            <RadioButton
                android:checked="true"
                android:id="@+id/RRdr"
                android:paddingLeft="@dimen/_10sdp"
                android:textSize="@dimen/_16sdp"
                android:text="@string/kilometer"
                android:layout_margin="@dimen/_10sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >

            </RadioButton>

            <RadioButton
                android:id="@+id/RRdr1"
                android:paddingLeft="@dimen/_10sdp"
                android:textSize="@dimen/_16sdp"
                android:text="@string/miles"
                android:layout_margin="@dimen/_10sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >

            </RadioButton>

        </RadioGroup>

    </LinearLayout>

</LinearLayout>