<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <androidx.cardview.widget.CardView
        android:id="@+id/cardSkip"
        app:cardCornerRadius="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <LinearLayout
            android:padding="@dimen/_10sdp"
            android:orientation="vertical"
            android:background="@color/black"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <TextView
                android:textStyle="bold"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp"
                android:text="@string/circle_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </TextView>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:background="@drawable/btn_new"
                >

                <EditText
                    android:id="@+id/edtCircleName"
                    android:inputType="text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:hint="@string/my_circle"
                    android:padding="@dimen/_10sdp"
                    android:textSize="@dimen/_14sdp">

                </EditText>


            </RelativeLayout>


            <RelativeLayout
                android:layout_marginBottom="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:id="@+id/RRContinueCreate"
                android:background="@drawable/btn_bg"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/create_circle"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_14sdp">

                </TextView>

            </RelativeLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>
