<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:id="@+id/RRtoolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            >

            <RelativeLayout
                android:id="@+id/RRback"
                android:layout_width="@dimen/_45sdp"
                android:layout_height="match_parent"
                >

                <ImageView
                    android:src="@drawable/cross_icon"
                    android:layout_centerInParent="true"
                    android:layout_width="@dimen/_15sdp"
                    android:layout_height="@dimen/_15sdp"
                    >

                </ImageView>

            </RelativeLayout>

            <TextView
                android:id="@+id/txtName"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:textSize="@dimen/_16sdp"
                android:text="@string/to_do_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </TextView>

        </LinearLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_below="@+id/RRtoolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <LinearLayout
                android:padding="@dimen/_20sdp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >         <com.google.android.gms.ads.AdView
                android:layout_alignParentTop="true"
                xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/adView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                ads:adSize="BANNER"
                ads:adUnitId="ca-app-pub-3940256099942544/6300978111">
            </com.google.android.gms.ads.AdView>


                <RelativeLayout
                    android:layout_marginTop="@dimen/_5sdp"
                    android:padding="@dimen/_5sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/my_task_list"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_14sdp">

                    </TextView>

                    <ImageView
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/selected_radio_btn"
                        android:layout_width="@dimen/_17sdp"
                        android:layout_height="@dimen/_17sdp">

                    </ImageView>



                </RelativeLayout>

                <RelativeLayout
                    android:layout_marginTop="@dimen/_10sdp"
                    android:padding="@dimen/_5sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <TextView
                        android:layout_gravity="center"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_14sdp"
                        android:text="@string/assigned_by_me"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                    </TextView>

                    <ImageView
                        android:layout_width="@dimen/_15sdp"
                        android:layout_height="@dimen/_15sdp"
                        android:layout_alignParentRight="true"
                        android:src="@drawable/unselected_radio_btn">

                    </ImageView>

                </RelativeLayout>

                <ImageView
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_gravity="center"
                    android:src="@drawable/todolist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    >
                </ImageView>

                <TextView
                    android:gravity="center"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sdp"
                    android:text="@string/you_have_no_tasks_yet_create_a_task_by_tapping_the_button_below_provided"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                </TextView>

                <RelativeLayout
                    android:layout_marginTop="@dimen/_20sdp"
                    android:id="@+id/RRShare"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45sdp"
                    android:background="@drawable/btn_bg">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/assing_task"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_14sdp">

                    </TextView>

                </RelativeLayout>


            </LinearLayout>

        </androidx.core.widget.NestedScrollView>




    </RelativeLayout>

</layout>
