<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <RelativeLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerInParent="true"
            android:background="@drawable/progresh_background"
            android:elevation="6dp"
            android:indeterminate="true"
            android:indeterminateTint="@color/purple_200"
            android:indeterminateTintMode="src_atop"
            android:padding="5dp"
            android:visibility="gone" />


        <RelativeLayout
            android:id="@+id/RRtoolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            >

            <RelativeLayout
                android:layout_alignParentLeft="true"
                android:id="@+id/RRback"
                android:layout_width="@dimen/_45sdp"
                android:layout_height="match_parent"
                >

                <ImageView
                    android:src="@drawable/cross_icon"
                    android:layout_centerInParent="true"
                    android:layout_width="@dimen/_15sdp"
                    android:layout_height="@dimen/_15sdp"
                    >
                </ImageView>

            </RelativeLayout>

            <TextView
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:id="@+id/txtName"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:textSize="@dimen/_16sdp"
                android:text="@string/update_mobile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >
            </TextView>


            <TextView
                android:id="@+id/txtSave"
                android:padding="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:textColor="@color/bg_SPLASH"
                android:layout_gravity="center"
                android:textSize="@dimen/_16sdp"
                android:text="@string/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </TextView>


        </RelativeLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_below="@+id/RRtoolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <LinearLayout
                android:padding="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >

                <EditText
                    android:inputType="number"
                    android:id="@+id/edtNewMobile"
                    android:padding="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:background="@null"
                    android:textColor="@color/black"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:textSize="@dimen/_16sdp"
                    android:text="@string/new_mobile_number"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp">

                </EditText>

                <View
                    android:layout_marginRight="@dimen/_20sdp"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:background="@color/gray_new"
                    android:layout_width="match_parent"
                    android:layout_height="1sp">
                </View>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </RelativeLayout>

</layout>
